# Capstone_aedbot

./: .gitignore  README.md
aedbot/: CMakeLists.txt  package.xml
aedbot_bringup/: CMakeLists.txt  README.md  create_udev_rules.sh  package.xml  setup.cfg  setup.py
aedbot_bringup/aedbot_bringup/scripts/: aedbot_imu_node.py  aedbot_mcu_node.py  aedbot_motor_setting_node.py
aedbot_bringup/aedbot_bringup/scripts/driver/: port.py
aedbot_bringup/launch/: aedbot_bringup.launch.py  aedbot_imu.launch.py  aedbot_lidar.launch.py  aedbot_mcu.launch.py  aedbot_motor_setting.launch.py
aedbot_bringup/param/: aedbot_imu.yaml  aedbot_lidar.yaml  aedbot_mcu.yaml  ekf.yaml
aedbot_cartographer/: CMakeLists.txt  package.xml
aedbot_cartographer/config/: aedbot_lidar.lua
aedbot_cartographer/launch/: cartographer.launch.py  cartographer_rviz.launch.py
aedbot_cartographer/rviz/: aedbot_cartographer.rviz
aedbot_description/: CMakeLists.txt  package.xml
aedbot_description/launch/: aedbot_description.launch.py  aedbot_description_rviz.launch.py  aedbot_state_publisher.launch.py
aedbot_description/meshes/: camera_link.STL
aedbot_description/urdf/: aedbot.urdf.xml
aedbot_gazebo/: CMakeLists.txt  package.xml
aedbot_gazebo/launch/: empty_world.launch.py  omo_r1mini.launch.py  robot_state_publisher.launch.py
aedbot_interfaces/: CMakeLists.txt  package.xml
aedbot_interfaces/msg/: Bridge.msg  FallDetectionToNav2.msg
aedbot_interfaces/srv/: FallDetectionToNav2.srv
aedbot_navigation/: CMakeLists.txt  package.xml
aedbot_navigation2/: CMakeLists.txt  package.xml
aedbot_navigation2/launch/: aedbot_navigation2.launch.py  navigation2.launch.py  navigation2_rviz.launch.py
aedbot_navigation2/map/: map_0528.pgm  map_0528.yaml  map_112.pgm  map_112.yaml  map_112_0504.pgm  map_112_0504.yaml  map_112_0510.pgm  map_112_0510.yaml  map_112_0516.pgm  map_112_0516.yaml
aedbot_navigation2/param/: aedbot.yaml
aedbot_navigation2/rviz/: tb3_navigation2.rviz
aedbot_navigation2/scripts/: go_to_goal.py  robot_navigator.py  test.py
aedbot_nodes/: CMakeLists.txt  package.xml  setup.cfg  setup.py
aedbot_nodes/launch/: aedbot_nodes.launch.py
aedbot_nodes/scripts/: HRI.py  arduino_bringup.py  bridge_node.py  cpr_node.py  facetime.py  get_dest.py  imu_subscriber.py  play_siren.py  test_pub_dest.py  test_sub.py
aedbot_nodes/src/: get_dest.py  test_sub.py
aedbot_slam/: CMakeLists.txt  package.xml
aedbot_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
aedbot_teleop/aedbot_teleop/script/: super_teleop.py  teleop_joy.py  teleop_keyboard.py
aedbot_teleop/launch/: teleop_joy.launch.py
omo_r1_description/: CMakeLists.txt  package.xml
omo_r1_description/launch/: omo_r1_description.launch.py  omo_r1_description_rviz.launch.py  omo_r1_state_publisher.launch.py
omo_r1_description/rviz/: model.rviz
omo_r1_description/urdf/: omo_r1.urdf.xml
omo_r1mini/: package.xml
omo_r1mini_bringup/: CMakeLists.txt  package.xml  setup.py
omo_r1mini_bringup/launch/: omo_r1mini_bringup.launch.py  omo_r1mini_imu.launch.py  omo_r1mini_motor_setting.launch.py
omo_r1mini_bringup/omo_r1mini_bringup/scripts/: omo_packet_handler.py  omo_r1mini_imu_node.py  omo_r1mini_mcu_node.py  omo_r1mini_motor_setting_node.py
omo_r1mini_bringup/param/: omo_r1mini_imu.yaml  omo_r1mini_lidar.yaml  omo_r1mini_mcu.yaml
omo_r1mini_gazebo/launch/: omo_r1mini.launch.py  robot_state_publisher.launch.py
omo_r1mini_gazebo/models/omo_r1/: model.sdf
omo_r1mini_gazebo/worlds/empty_worlds/: omo_r1mini.model
omo_r1mini_gazebo/worlds/turtlebot3_worlds/: omo_r1.model
omo_r1mini_interfaces/: CMakeLists.txt
omo_r1mini_teleop/omo_r1mini_teleop/script/: teleop_keyboard.py
play_sound/: display_01.py  play_sound.py  test_01.py  test_sound.py
