<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aedbot_bringup</name>
  <version>0.0.1</version>
  <description>
    ROS 2 launch scripts for starting the OMORobot R1 Mini
  </description>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/bishopearson/aedbot</url>
  <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <!--
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  -->
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>aedbot_description</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>robot_localization</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-serial</depend>

  <depend>aedbot_interfaces</depend>
  <depend>message_filters</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
